--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -10,6 +10,7 @@ collections:
     label: "Blog"
     folder: "src/blog"
     create: true
+    delete: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
       - { label: "Featured Image", name: "image", widget: image}
