--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   branch: main
 
 publish_mode: editorial_workflow
-media_folder: "/public/"
+media_folder: "../public"
 public_folder: "public/"
 collections:
   - name : "blog"
