--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -3,8 +3,8 @@ backend:
   branch: main
 
 publish_mode: editorial_workflow
-media_folder: "/public/pictures/articles/analysis"
-public_folder: "pictures/articles/analysis"
+media_folder: "/public"
+public_folder: "/pictures/articles/analysis"
 collections:
   - name : "blog"
     label: "Blog"
