--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,13 +2,12 @@ backend:
   name: git-gateway
   branch: main
 
-publish_mode: editorial_workflow
 media_folder: "/public"
 public_folder: "/public"
 collections:
   - name : "blog"
     label: "Blog"
-    folder: "./src/blog"
+    folder: "/src/blog"
     create: true
     delete: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
