--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -7,7 +7,7 @@ public_folder: "/public"
 collections:
   - name : "blog"
     label: "Blog"
-    folder: "/src/blog"
+    folder: "abdul"
     create: true
     delete: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
