--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -2,12 +2,13 @@ backend:
   name: git-gateway
   branch: main
 
-media_folder: "/public"
-public_folder: "/public"
+
+media_folder: "./public"
+public_folder: "./public"
 collections:
   - name : "blog"
     label: "Blog"
-    folder: "abdul"
+    folder: "./src/blog"
     create: true
     delete: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
