--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,12 +2,12 @@ backend:
   name: git-gateway
   branch: main
 
-media_folder: "/public"
-public_folder: "/public"
+media_folder: "public"
+public_folder: "public"
 collections:
   - name : "blog"
     label: "Blog"
-    folder: "/src/blog"
+    folder: "src/blog"
     create: true
     delete: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
