--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -3,12 +3,12 @@ backend:
   branch: main
 
 
-media_folder: "./public"
-public_folder: "./public"
+media_folder: "public"
+public_folder: "public"
 collections:
   - name : "blog"
     label: "Blog"
-    folder: "./src/blog"
+    folder: "src/blog"
     create: true
     delete: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
