--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,8 +2,9 @@ backend:
   name: git-gateway
   branch: main
 
-media_folder: "public"
-public_folder: "public"
+
+media_folder: "public/pictures/"
+public_folder: "pictures/"
 collections:
   - name : "blog"
     label: "Blog"
