--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -3,8 +3,8 @@ backend:
   branch: main
 
 
-media_folder: "public"
-public_folder: "public"
+media_folder: "public/pictures/"
+public_folder: "pictures/"
 collections:
   - name : "blog"
     label: "Blog"
